LayoutTest failures on r106797 https://bugs.webkit.org/show_bug.cgi?id=77868

Call suspendIfNeeded from subclass of IDBRequest, IDBVersionChangeRequest.

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-02-06
Reviewed by Simon Hausmann.

* storage/IDBVersionChangeRequest.cpp:
(WebCore::IDBVersionChangeRequest::create):

Canonical link: https://commits.webkit.org/94740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106806 268f45cc-cd09-0410-ab3c-d52691b4dbfc